--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,28 @@
 {
+    "name": "daanmooij/advent-of-code",
+    "description": "collection of challenges",
+    "license": "MIT",
+    "version":  "1.0",
+    "authors": [
+        {
+            "name": "Daan Mooij",
+            "email": "daanmooij@gmail.com"
+        }
+    ],
     "require": {
-        "phpunit/phpunit": "^8.0"
+        "php": "^7.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.1"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app"
+            "DaanMooij\\AdventOfCode\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "DaanMooij\\AdventOfCode\\": "tests/"
         }
     }
 }
