--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^7.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "phpstan/phpstan": "^0.12.63"
     },
     "autoload": {
         "psr-4": {
